--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,3 +6,11 @@
 	margin-top: 0;
 	font-weight: 500;
 }
+
+.text {
+}
+
+.actions {
+	border-top: 1px solid #d9d9d9;
+	justify-content: flex-end;
+}
