--- a/src/components/Map/Map.module.css
+++ b/src/components/Map/Map.module.css
@@ -2,3 +2,26 @@
 	width: 100%;
 	height: 200px;
 }
+
+.wrapper {
+	width: 100%;
+	height: 200px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.loader {
+	position: absolute;
+}
+
+.info {
+	padding: 0;
+	margin: 15px 0 0 0;
+}
+
+.info__item {
+	list-style-type: none;
+	line-height: 22px;
+}
