--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,17 @@
 :global body {
 	background-color: #ededed;
 	font-size: 14px;
+
+	width: 100%;
+	height: 100%;
+}
+
+:global html {
+	width: 100%;
+	height: 100%;
+}
+
+:global #root {
+	width: 100%;
+	height: 100%;
 }
